# rss-receipts

./: .gitignore  Containerfile  LICENSE.txt  README.md  default.ini  main.py  pyproject.toml
.github/workflows/: docker-image.yml
