[tool.poetry]
name = "rss-receipts"
version = "0.1.4"
description = "Fetches RSS feeds from a configuration file and prints formatted output to an ESCPOS receipt printer"
authors = ["Frederick Ding <frederick@frederickding.com>"]

[tool.poetry.dependencies]
python = "^3.9"
feedparser = "^6.0.10"
escpos = "^1.9"
Unidecode = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

